--- a/src/main/resources/templates/reports/new.html
+++ b/src/main/resources/templates/reports/new.html
@@ -34,8 +34,7 @@
                                         <label class="form-label" for="name">氏名</label>
                                         <p class="mb-1"></p>
                                         <div class="col-md-7">
-                                            <input class="form-control" type="text" th:field="*{employee.name}" th:errorclass="err" id="name">
-                                            <span th:errors="*{employee.name}" class="text-danger"></span>
+                                            <span th:text="*{employee.name}"></span>
                                         </div>
                                     </div>
                                     <div class="mb-3">
@@ -58,7 +57,7 @@
                                 </div>
                                 <p class="mt-5">
                                     <input type="submit" value="登録" class="btn btn-primary">
-                                    <a th:href="@{/employees}" class="btn btn-primary">戻る</a>
+                                    <a th:href="@{/reports}" class="btn btn-primary">戻る</a>
                                 </p>
                             </form>
                         </div>
